--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
+		<meta name="twitter:card" content="summary" />
+		<meta property="og:url" content="https://jun-t-git.github.io/som/" />
+		<meta property="og:title" content="Let's Enjoy SOM！" />
+        	<meta property="og:description" content="SOM（自己組織化マップ）によって色配列をマッピングするデモです。" />
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Let's Enjoy SOM !</title>
 	</head>
