--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="twitter:card" content="summary" />
 		<meta property="og:url" content="https://jun-t-git.github.io/som/" />
 		<meta property="og:title" content="Let's Enjoy SOM！" />
-        	<meta property="og:description" content="SOM（自己組織化マップ）によって色配列をマッピングするデモです。" />
+        	<meta property="og:description" content="SOM（自己組織化マップ）のデモです．3次元の色からなる配列を2次元にマッピングします．" />
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Let's Enjoy SOM !</title>
 	</head>
