--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta property="og:url" content="https://jun-t-git.github.io/som/" />
 		<meta property="og:title" content="Let's Enjoy SOM！" />
         	<meta property="og:description" content="SOM（自己組織化マップ）のデモです．3次元の色からなる配列を2次元にマッピングします．" />
-		<meta property="og:image" content="thumbnail.png" />
+		<meta property="og:image" content="https://jun-t-git.github.io/som/thumbnail.png" />
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Let's Enjoy SOM !</title>
 	</head>
