ファビコンの追加

--- a/index.html
+++ b/index.html
@@ -2,19 +2,28 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width">
-		<meta name="twitter:card" content="summary" />
-		<meta property="og:url" content="https://jun-t-git.github.io/som/" />
-		<meta property="og:title" content="Let's Enjoy SOM！" />
-        	<meta property="og:description" content="SOM（自己組織化マップ）のデモです．3次元の色からなる配列を2次元にマッピングします．" />
-		<meta property="og:image" content="https://jun-t-git.github.io/som/thumb.png" />
-		<link rel="stylesheet" type="text/css" href="style.css">
+        <meta name="viewport" content="width=device-width">
+        <meta name="twitter:card" content="summary" />
+        <meta property="og:url" content="https://jun-t-git.github.io/som/" />
+        <meta property="og:title" content="Let's Enjoy SOM！" />
+        <meta property="og:description" content="SOM（自己組織化マップ）のデモです．3次元の色からなる配列を2次元にマッピングします．" />
+        <meta property="og:image" content="https://jun-t-git.github.io/som/image/thumb.png" />
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+        <link rel="shortcut icon" href="image/fabicon.ico">
 		<title>Let's Enjoy SOM !</title>
 	</head>
 
 	<body id="bodyId">
         <header>
             <h1>Let's Enjoy SOM !</h1>
+            <div class="icon">
+                <a href="https://github.com/Jun-T-git/som"
+                    target="_blank"
+                    title="GitHubページを開く">
+                    <span class="fab fa-3x fa-github-square icon_color"></span>
+                </a> 
+            </div>
             <hr>
         </header>
         
