--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
+	<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <meta name="twitter:card" content="summary" />
         <meta property="og:url" content="https://jun-t-git.github.io/som/" />
@@ -10,8 +10,11 @@
         <meta property="og:image" content="https://jun-t-git.github.io/som/image/thumb.png" />
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-        <link rel="shortcut icon" href="image/fabicon.ico">
-		<title>Let's Enjoy SOM !</title>
+        <!-- ファビコン -->
+	<link rel="icon" href="image/favicon.ico">
+	<!-- スマホ用アイコン -->
+	<link rel="apple-touch-icon" sizes="180x180" href="image/thumb.png">
+	<title>Let's Enjoy SOM !</title>
 	</head>
 
 	<body id="bodyId">
