--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
         <!-- ファビコン -->
-	<link rel="icon" href="image/favicon.ico">
+	<link rel="icon" href="https://jun-t-git.github.io/som/image/favicon.ico">
 	<!-- スマホ用アイコン -->
-	<link rel="apple-touch-icon" sizes="180x180" href="image/thumb.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://jun-t-git.github.io/som/image/thumb.png">
 	<title>Let's Enjoy SOM !</title>
 	</head>
 
