--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
         <link rel="apple-touch-icon" type="image/png" href="image/favicons/apple-touch-icon-180x180.png">
         <link rel="icon" type="image/png" href="image/favicons//icon-192x192.png">
-	<title>Let's Enjoy SOM !</title>
+	<title>SOMeL</title>
 	</head>
 
 	<body id="bodyId">
         <header>
-            <h1>Let's Enjoy SOM !</h1>
+            <h1>SOMeL</h1>
             <div class="icon">
                 <a href="https://github.com/Jun-T-git/som"
                     target="_blank"
