--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width">
         <meta name="twitter:card" content="summary" />
         <meta property="og:url" content="https://jun-t-git.github.io/som/" />
-        <meta property="og:title" content="Let's Enjoy SOM！" />
-        <meta property="og:description" content="SOM（自己組織化マップ）のデモです．3次元の色からなる配列を2次元にマッピングします．" />
+        <meta property="og:title" content="SOMeL" />
+        <meta property="og:description" content="SOM（自己組織化マップ）を直感的に理解するためのwebサイト．3次元の色からなる配列を2次元にマッピングします．" />
         <meta property="og:image" content="https://jun-t-git.github.io/som/image/thumb.png" />
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
