フォントの変更

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-        <meta name="twitter:card" content="summary" />
-        <meta property="og:url" content="https://jun-t-git.github.io/som/" />
-        <meta property="og:title" content="SOMeL" />
-        <meta property="og:description" content="SOM（自己組織化マップ）を直感的に理解するためのwebサイト．3次元の色からなる配列を2次元にマッピングします．" />
-        <meta property="og:image" content="https://jun-t-git.github.io/som/image/thumb.png" />
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-        <link rel="apple-touch-icon" type="image/png" href="image/favicons/apple-touch-icon-180x180.png">
-        <link rel="icon" type="image/png" href="image/favicons//icon-192x192.png">
-	<title>SOMeL</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
+		<meta name="twitter:card" content="summary" />
+		<meta property="og:url" content="https://jun-t-git.github.io/som/" />
+		<meta property="og:title" content="SOMeL" />
+		<meta property="og:description" content="SOM（自己組織化マップ）を直感的に理解するためのwebサイト．3次元の色からなる配列を2次元にマッピングします．" />
+		<meta property="og:image" content="https://jun-t-git.github.io/som/image/thumb.png" />
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700 rel="stylesheet">
+		<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+		<link rel="apple-touch-icon" type="image/png" href="image/favicons/apple-touch-icon-180x180.png">
+		<link rel="icon" type="image/png" href="image/favicons//icon-192x192.png">
+		<title>SOMeL</title>
 	</head>
 
 	<body id="bodyId">
