--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:description" content="SOM（自己組織化マップ）を直感的に理解するためのwebサイト．3次元の色からなる配列を2次元にマッピングします．" />
 		<meta property="og:image" content="https://jun-t-git.github.io/som/image/thumb.png" />
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700 rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet">
 		<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 		<link rel="apple-touch-icon" type="image/png" href="image/favicons/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="image/favicons//icon-192x192.png">
