--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="data">
                 Panel Size <input type="number" value="30" max="30" min="3" id="size"><br>
                 Input Size <input type="number" value="30" max="30" min="3" id="input_size"><br>
-                Neighbor <input type="number" value="14" max="30" min="1" id="neighbornum"><br>
+                Neighbor(Init) <input type="number" value="14" max="30" min="1" id="neighbornum"><br>
                 Input[<input type="number" value="1" max="30" min="1" id="input_index">](
                 R: <input type="number" value="0" max="255" min="0" id="R">, 
                 G: <input type="number" value="0" max="255" min="0" id="G">, 
