--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="icon">
                 <a href="https://github.com/Jun-T-git/som"
                     target="_blank"
+		    rel="noopener noreferrer"
                     title="GitHubページを開く">
                     <span class="fab fa-3x fa-github-square icon_color"></span>
                 </a> 
