画面比率対応

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <title>SOMeL</title>
     </head>
 
-	<body id="bodyId">
+	<body>
         <header>
             <h1>SOMeL</h1>
             <div class="icon">
@@ -33,7 +33,7 @@
         </header>
 
         <div id="main">
-            <canvas id="somcanvas" width="800" height="700"></canvas>
+            <canvas id="somcanvas" width="800px" height="700px"></canvas>
             <div id="rightbox">
                 <div id="data">
                     Panel Size <input type="number" value="30" max="30" min="3" id="size"><br>
